CS1507_U201514658_丁亚东/lab1/ding.output
语法

    0 $accept: Program $end

    1 Program: ProgramFileds MainFunction
    2        | ProgramFileds

    3 ProgramFileds: ProgramFiled
    4              | ProgramFileds ProgramFiled

    5 ProgramFiled: VariableDef
    6             | FunctionDef
    7             | ClassDef

    8 VariableDef: Variable SPSEMICOLON
    9            | Variable CommaIdentifiers SPSEMICOLON
   10            | error SPSEMICOLON

   11 CommaIdentifiers: SPCOMMA IDENTIFIER
   12                 | CommaIdentifiers SPCOMMA IDENTIFIER

   13 Variable: Type IDENTIFIER
   14         | Variable SPLEFTBRACKET IDENTIFIER SPRIGHTBRACKET
   15         | Variable SPLEFTBRACKET CONSTANTINT SPRIGHTBRACKET

   16 Type: TYPEINTEGER
   17     | TYPEFLOAT
   18     | TYPEBOOL
   19     | TYPESTRING
   20     | TYPEVOID
   21     | KEYCLASS IDENTIFIER
   22     | Type SPLEFTBRACKET SPRIGHTBRACKET

   23 Variables: Variable
   24          | Variables SPCOMMA Variable

   25 Formals: %empty
   26        | Variables

   27 MainFunction: KEYSTATIC TYPEVOID KEYMAIN SPLEFTPRNT SPRIGHTPRNT StmtBlock

   28 FunctionDef: Type IDENTIFIER SPLEFTPRNT Formals SPRIGHTPRNT StmtBlock
   29            | KEYSTATIC Type IDENTIFIER SPLEFTPRNT Formals SPRIGHTPRNT StmtBlock

   30 ClassDef: KEYCLASS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE
   31         | KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE
   32         | error SPRIGHTBRACE

   33 Fields: %empty
   34       | Field Fields

   35 Field: VariableDef
   36      | FunctionDef

   37 StmtBlock: SPLEFTBRACE Stmts SPRIGHTBRACE
   38          | error SPRIGHTBRACE

   39 Stmts: %empty
   40      | Stmt Stmts

   41 Stmt: VariableDef
   42     | SimpleStmt SPSEMICOLON
   43     | IfStmt
   44     | WhileStmt
   45     | ForStmt
   46     | BreakStmt SPSEMICOLON
   47     | ContinueStmt SPSEMICOLON
   48     | ReturnStmt SPSEMICOLON
   49     | PrintStmt SPSEMICOLON
   50     | StmtBlock

   51 SimpleStmt: %empty
   52           | LValue OPASSIGN Expr
   53           | SelfLvalue
   54           | Call

   55 LValue: IDENTIFIER
   56       | Expr SPDOT IDENTIFIER
   57       | Expr SPLEFTBRACKET Expr SPRIGHTBRACKET
   58       | SelfLvalue

   59 SelfLvalue: LValue OPSELFADD
   60           | LValue OPSELFMINUS

   61 Call: IDENTIFIER SPLEFTPRNT Actuals SPRIGHTPRNT
   62     | Expr SPDOT IDENTIFIER SPLEFTPRNT Actuals SPRIGHTPRNT

   63 Actuals: %empty
   64        | Exprs

   65 Exprs: Expr
   66      | Exprs SPCOMMA Expr

   67 ForStmt: KEYFOR SPLEFTPRNT SimpleStmt SPSEMICOLON BoolExpr SPSEMICOLON SimpleStmt SPRIGHTPRNT Stmt

   68 WhileStmt: KEYWHILE SPLEFTPRNT BoolExpr SPRIGHTPRNT Stmt

   69 IfStmt: KEYIF SPLEFTPRNT BoolExpr SPRIGHTPRNT Stmt
   70       | KEYIF SPLEFTPRNT BoolExpr SPRIGHTPRNT Stmt KEYELSE Stmt

   71 ReturnStmt: KEYRETURN
   72           | KEYRETURN Expr

   73 BreakStmt: KEYBREAK

   74 ContinueStmt: KEYCONTINUE

   75 PrintStmt: KEYPRINT SPLEFTPRNT Exprs SPRIGHTPRNT

   76 BoolExpr: Expr

   77 Expr: Constant
   78     | LValue
   79     | KEYTHIS
   80     | Call
   81     | SPLEFTPRNT Expr SPRIGHTPRNT
   82     | Expr OPPLUS Expr
   83     | Expr OPMINUS Expr
   84     | Expr OPMULTIPLY Expr
   85     | Expr OPDIVIDE Expr
   86     | OPMINUS Expr
   87     | Expr OPLIGHT Expr
   88     | Expr OPLIGHTEQ Expr
   89     | Expr OPGREAT Expr
   90     | Expr OPGREATEQ Expr
   91     | Expr OPEQUAL Expr
   92     | Expr OPNOTEQUAL Expr
   93     | Expr OPAND Expr
   94     | Expr OPOR Expr
   95     | OPNOT Expr
   96     | KEYREADINTEGER SPLEFTPRNT SPRIGHTPRNT
   97     | KEYREADLINE SPLEFTPRNT SPRIGHTPRNT
   98     | KEYREADFLOAT SPLEFTPRNT SPRIGHTPRNT
   99     | KEYNEW IDENTIFIER SPLEFTPRNT SPRIGHTPRNT
  100     | KEYNEW Type SPLEFTBRACKET Expr SPRIGHTBRACKET
  101     | KEYINSTANCEOF SPLEFTPRNT Expr SPCOMMA IDENTIFIER SPRIGHTPRNT
  102     | SPLEFTPRNT KEYCLASS IDENTIFIER SPRIGHTPRNT Expr

  103 Constant: CONSTANTINT
  104         | CONSTANTFLOAT
  105         | CONSTANTBOOL
  106         | CONSTANTSTRING
  107         | CONSTANTNULL


Terminals, with rules where they appear

$end (0) 0
error (256) 10 32 38
SPSEMICOLON (258) 8 9 10 42 46 47 48 49 67
SPCOMMA (259) 11 12 24 66 101
SPDOT (260) 56 62
SPLEFTBRACE (261) 30 31 37
SPRIGHTBRACE (262) 30 31 32 37 38
SPLEFTPRNT (263) 27 28 29 61 62 67 68 69 70 75 81 96 97 98 99 101 102
SPRIGHTPRNT (264) 27 28 29 61 62 67 68 69 70 75 81 96 97 98 99 101
    102
SPLEFTBRACKET (265) 14 15 22 57 100
SPRIGHTBRACKET (266) 14 15 22 57 100
OPPLUS (267) 82
OPMINUS (268) 83 86
OPMULTIPLY (269) 84
OPDIVIDE (270) 85
OPASSIGN (271) 52
OPAND (272) 93
OPOR (273) 94
OPNOT (274) 95
OPEQUAL (275) 91
OPNOTEQUAL (276) 92
OPGREAT (277) 89
OPLIGHT (278) 87
OPGREATEQ (279) 90
OPLIGHTEQ (280) 88
OPSELFADD (281) 59
OPSELFMINUS (282) 60
TYPEVOID (283) 20 27
TYPEINTEGER (284) 16
TYPEFLOAT (285) 17
TYPEBOOL (286) 18
TYPESTRING (287) 19
KEYMAIN (288) 27
KEYCLASS (289) 21 30 31 102
KEYNEW (290) 99 100
KEYEXTENDS (291) 31
KEYTHIS (292) 79
KEYINSTANCEOF (293) 101
KEYIF (294) 69 70
KEYELSE (295) 70
KEYFOR (296) 67
KEYWHILE (297) 68
KEYBREAK (298) 73
KEYCONTINUE (299) 74
KEYRETURN (300) 71 72
KEYSTATIC (301) 27 29
KEYPRINT (302) 75
KEYREADINTEGER (303) 96
KEYREADLINE (304) 97
KEYREADFLOAT (305) 98
CONSTANTNULL (306) 107
CONSTANTBOOL (307) 105
CONSTANTINT (308) 15 103
CONSTANTFLOAT (309) 104
CONSTANTSTRING (310) 106
IDENTIFIER (311) 11 12 13 14 21 28 29 30 31 55 56 61 62 99 101 102
LOWER_THAN_ELSE (312)


Nonterminals, with rules where they appear

$accept (58)
    左： 0
Program (59)
    左： 1 2, 右： 0
ProgramFileds (60)
    左： 3 4, 右： 1 2 4
ProgramFiled (61)
    左： 5 6 7, 右： 3 4
VariableDef (62)
    左： 8 9 10, 右： 5 35 41
CommaIdentifiers (63)
    左： 11 12, 右： 9 12
Variable (64)
    左： 13 14 15, 右： 8 9 14 15 23 24
Type (65)
    左： 16 17 18 19 20 21 22, 右： 13 22 28 29 100
Variables (66)
    左： 23 24, 右： 24 26
Formals (67)
    左： 25 26, 右： 28 29
MainFunction (68)
    左： 27, 右： 1
FunctionDef (69)
    左： 28 29, 右： 6 36
ClassDef (70)
    左： 30 31 32, 右： 7
Fields (71)
    左： 33 34, 右： 30 31 34
Field (72)
    左： 35 36, 右： 34
StmtBlock (73)
    左： 37 38, 右： 27 28 29 50
Stmts (74)
    左： 39 40, 右： 37 40
Stmt (75)
    左： 41 42 43 44 45 46 47 48 49 50, 右： 40 67 68 69 70
SimpleStmt (76)
    左： 51 52 53 54, 右： 42 67
LValue (77)
    左： 55 56 57 58, 右： 52 59 60 78
SelfLvalue (78)
    左： 59 60, 右： 53 58
Call (79)
    左： 61 62, 右： 54 80
Actuals (80)
    左： 63 64, 右： 61 62
Exprs (81)
    左： 65 66, 右： 64 66 75
ForStmt (82)
    左： 67, 右： 45
WhileStmt (83)
    左： 68, 右： 44
IfStmt (84)
    左： 69 70, 右： 43
ReturnStmt (85)
    左： 71 72, 右： 48
BreakStmt (86)
    左： 73, 右： 46
ContinueStmt (87)
    左： 74, 右： 47
PrintStmt (88)
    左： 75, 右： 49
BoolExpr (89)
    左： 76, 右： 67 68 69 70
Expr (90)
    左： 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95
    96 97 98 99 100 101 102, 右： 52 56 57 62 65 66 72 76 81 82 83
    84 85 86 87 88 89 90 91 92 93 94 95 100 101 102
Constant (91)
    左： 103 104 105 106 107, 右： 77


State 0

    0 $accept: . Program $end

    error        shift, and go to state 1
    TYPEVOID     shift, and go to state 2
    TYPEINTEGER  shift, and go to state 3
    TYPEFLOAT    shift, and go to state 4
    TYPEBOOL     shift, and go to state 5
    TYPESTRING   shift, and go to state 6
    KEYCLASS     shift, and go to state 7
    KEYSTATIC    shift, and go to state 8

    Program        转到状态 9
    ProgramFileds  转到状态 10
    ProgramFiled   转到状态 11
    VariableDef    转到状态 12
    Variable       转到状态 13
    Type           转到状态 14
    FunctionDef    转到状态 15
    ClassDef       转到状态 16


State 1

   10 VariableDef: error . SPSEMICOLON
   32 ClassDef: error . SPRIGHTBRACE

    SPSEMICOLON   shift, and go to state 17
    SPRIGHTBRACE  shift, and go to state 18


State 2

   20 Type: TYPEVOID .

    $default  reduce using rule 20 (Type)


State 3

   16 Type: TYPEINTEGER .

    $default  reduce using rule 16 (Type)


State 4

   17 Type: TYPEFLOAT .

    $default  reduce using rule 17 (Type)


State 5

   18 Type: TYPEBOOL .

    $default  reduce using rule 18 (Type)


State 6

   19 Type: TYPESTRING .

    $default  reduce using rule 19 (Type)


State 7

   21 Type: KEYCLASS . IDENTIFIER
   30 ClassDef: KEYCLASS . IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE
   31         | KEYCLASS . IDENTIFIER KEYEXTENDS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE

    IDENTIFIER  shift, and go to state 19


State 8

   29 FunctionDef: KEYSTATIC . Type IDENTIFIER SPLEFTPRNT Formals SPRIGHTPRNT StmtBlock

    TYPEVOID     shift, and go to state 2
    TYPEINTEGER  shift, and go to state 3
    TYPEFLOAT    shift, and go to state 4
    TYPEBOOL     shift, and go to state 5
    TYPESTRING   shift, and go to state 6
    KEYCLASS     shift, and go to state 20

    Type  转到状态 21


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


State 10

    1 Program: ProgramFileds . MainFunction
    2        | ProgramFileds .
    4 ProgramFileds: ProgramFileds . ProgramFiled

    error        shift, and go to state 1
    TYPEVOID     shift, and go to state 2
    TYPEINTEGER  shift, and go to state 3
    TYPEFLOAT    shift, and go to state 4
    TYPEBOOL     shift, and go to state 5
    TYPESTRING   shift, and go to state 6
    KEYCLASS     shift, and go to state 7
    KEYSTATIC    shift, and go to state 23

    $end  reduce using rule 2 (Program)

    ProgramFiled  转到状态 24
    VariableDef   转到状态 12
    Variable      转到状态 13
    Type          转到状态 14
    MainFunction  转到状态 25
    FunctionDef   转到状态 15
    ClassDef      转到状态 16


State 11

    3 ProgramFileds: ProgramFiled .

    $default  reduce using rule 3 (ProgramFileds)


State 12

    5 ProgramFiled: VariableDef .

    $default  reduce using rule 5 (ProgramFiled)


State 13

    8 VariableDef: Variable . SPSEMICOLON
    9            | Variable . CommaIdentifiers SPSEMICOLON
   14 Variable: Variable . SPLEFTBRACKET IDENTIFIER SPRIGHTBRACKET
   15         | Variable . SPLEFTBRACKET CONSTANTINT SPRIGHTBRACKET

    SPSEMICOLON    shift, and go to state 26
    SPCOMMA        shift, and go to state 27
    SPLEFTBRACKET  shift, and go to state 28

    CommaIdentifiers  转到状态 29


State 14

   13 Variable: Type . IDENTIFIER
   22 Type: Type . SPLEFTBRACKET SPRIGHTBRACKET
   28 FunctionDef: Type . IDENTIFIER SPLEFTPRNT Formals SPRIGHTPRNT StmtBlock

    SPLEFTBRACKET  shift, and go to state 30
    IDENTIFIER     shift, and go to state 31


State 15

    6 ProgramFiled: FunctionDef .

    $default  reduce using rule 6 (ProgramFiled)


State 16

    7 ProgramFiled: ClassDef .

    $default  reduce using rule 7 (ProgramFiled)


State 17

   10 VariableDef: error SPSEMICOLON .

    $default  reduce using rule 10 (VariableDef)


State 18

   32 ClassDef: error SPRIGHTBRACE .

    $default  reduce using rule 32 (ClassDef)


State 19

   21 Type: KEYCLASS IDENTIFIER .
   30 ClassDef: KEYCLASS IDENTIFIER . SPLEFTBRACE Fields SPRIGHTBRACE
   31         | KEYCLASS IDENTIFIER . KEYEXTENDS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE

    SPLEFTBRACE  shift, and go to state 32
    KEYEXTENDS   shift, and go to state 33

    $default  reduce using rule 21 (Type)


State 20

   21 Type: KEYCLASS . IDENTIFIER

    IDENTIFIER  shift, and go to state 34


State 21

   22 Type: Type . SPLEFTBRACKET SPRIGHTBRACKET
   29 FunctionDef: KEYSTATIC Type . IDENTIFIER SPLEFTPRNT Formals SPRIGHTPRNT StmtBlock

    SPLEFTBRACKET  shift, and go to state 30
    IDENTIFIER     shift, and go to state 35


State 22

    0 $accept: Program $end .

    $default  接受


State 23

   27 MainFunction: KEYSTATIC . TYPEVOID KEYMAIN SPLEFTPRNT SPRIGHTPRNT StmtBlock
   29 FunctionDef: KEYSTATIC . Type IDENTIFIER SPLEFTPRNT Formals SPRIGHTPRNT StmtBlock

    TYPEVOID     shift, and go to state 36
    TYPEINTEGER  shift, and go to state 3
    TYPEFLOAT    shift, and go to state 4
    TYPEBOOL     shift, and go to state 5
    TYPESTRING   shift, and go to state 6
    KEYCLASS     shift, and go to state 20

    Type  转到状态 21


State 24

    4 ProgramFileds: ProgramFileds ProgramFiled .

    $default  reduce using rule 4 (ProgramFileds)


State 25

    1 Program: ProgramFileds MainFunction .

    $default  reduce using rule 1 (Program)


State 26

    8 VariableDef: Variable SPSEMICOLON .

    $default  reduce using rule 8 (VariableDef)


State 27

   11 CommaIdentifiers: SPCOMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 37


State 28

   14 Variable: Variable SPLEFTBRACKET . IDENTIFIER SPRIGHTBRACKET
   15         | Variable SPLEFTBRACKET . CONSTANTINT SPRIGHTBRACKET

    CONSTANTINT  shift, and go to state 38
    IDENTIFIER   shift, and go to state 39


State 29

    9 VariableDef: Variable CommaIdentifiers . SPSEMICOLON
   12 CommaIdentifiers: CommaIdentifiers . SPCOMMA IDENTIFIER

    SPSEMICOLON  shift, and go to state 40
    SPCOMMA      shift, and go to state 41


State 30

   22 Type: Type SPLEFTBRACKET . SPRIGHTBRACKET
